Fix for tabs and zoom z-index

--- a/wp-content/themes/graciesgenes/style.css
+++ b/wp-content/themes/graciesgenes/style.css
@@ -16,10 +16,10 @@ Version: 1
 
 /* Table of Content
 ==================================================
-	#Site Styles
-	#Page Styles
-	#Media Queries
-	#Font-Face */
+    #Site Styles
+    #Page Styles
+    #Media Queries
+    #Font-Face */
 
 /* #Site Styles
 ================================================== */
@@ -220,4 +220,9 @@ a { text-decoration: none; color: black; }
 }
 #product_category_image_0, #product_category_image_1{
 
+}
+
+/*zoom and tabs layer fix*/
+.tabs{
+    z-index: -1;
 }
